<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="231dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/intents"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonNewAct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@android:color/holo_blue_light"
                    android:minWidth="100dp"
                    android:onClick="newActivityClicked"
                    android:text="@string/new_activity"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/buttonCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@color/colorAccent"
                    android:minWidth="100dp"
                    android:onClick="callClicked"
                    android:text="@string/call"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/buttonView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@android:color/holo_red_light"
                    android:minWidth="100dp"
                    android:onClick="viewClicked"
                    android:text="@string/view"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/buttonSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@android:color/holo_orange_light"
                    android:minWidth="100dp"
                    android:onClick="searchClicked"
                    android:text="@string/search"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/buttonSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#ff00ff00"
                    android:minWidth="100dp"
                    android:onClick="sendClicked"
                    android:text="@string/send"
                    android:textAllCaps="true" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>